<resources>
    <string name="close">Close</string>
    <string name="setting">Setting</string>
    <string name="internal_memory">INTERNAL SD MEMORY</string>
    <string name="external_memory">EXTERNAL SD MEMORY</string>
    <string name="total_lecture">Total %s Lectures</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sd_main_layout_folders">Folders</string>
    <string name="sd_main_layout_files">Files</string>
    <string name="sd_main_layout_searched_lectures">Searched lectures : </string>
    <string name="text_favorite_empty_message">There are no favorite videos.</string>
    <string name="text_recently_played_empty_message">No recent playlists.</string>
    <string name="text_empty_message">No contents.</string>
    <string name="sort">Sort</string>
    <string name="sort_name_asc">Name Asc</string>
    <string name="sort_name_des">Name Des</string>
    <string name="search_hint">Search All.</string>
    <string name="search_input_message">Please enter a search term.</string>
    <string name="search_empty_message">No results were found for your search.</string>
    <string name="player_locked">Locked</string>
    <string name="player_unlocked">Unlocked</string>
    <string name="player_bookmark_list">Bookmark list</string>
    <string name="player_dialog_bookmark_check_memo">Memo</string>
    <string name="player_dialog_bookmark_check_input_memo">Please input memo</string>
    <string name="player_function_bposition_ahead_of_aposition">Current time is earlier than the start time.</string>
    <string name="player_function_section_shorter_than_tensecond">The section is too short. It should be longer than 10 seconds.</string>
    <string name="player_function_no_memo">No memo</string>
    <string name="player_function_start_section_repeat">Repeating the section.</string>
    <string name="player_function_repeatmode1">Repeat off</string>
    <string name="player_function_repeatmode2">Repeat one</string>
    <string name="player_function_repeatmode3">Repeat all</string>
    <string name="player_error_surface_calling">In case of native player, Surface must be created before calling setDataSource() method</string>
    <string name="setting_info_player">Player</string>
    <string name="setting_info_decoder">Decoder</string>
    <string name="setting_info_gesture_availble">Gesture availble</string>
    <string name="setting_info_swxplay">Media Decoder</string>
    <string name="setting_info_app_name">Name</string>
    <string name="setting_info_app_version">Version</string>
    <string name="setting_info_app_company">Made by</string>
    <string name="setting_info_contact">Partnership</string>
    <string name="setting_info_fnc_privacy">Privacy Policy</string>
    <string name="setting_decoder_hardware">H/W</string>
    <string name="setting_decoder_software">S/W</string>
    <string name="setting_none">N/A</string>
    <string name="setting_player_base">Base Player</string>
    <string name="setting_player_double_speed">Double Speed Player</string>
    <string name="setting_description_native_player">Option for player type</string>
    <string name="setting_description_decoder">Try S/W player when there is a problem with H/W playback.</string>
    <string name="setting_description_restricted_internet">Block phone messages Wi-Fi, Bluetooth from mobile networks to avoid interference when playing content..</string>
    <string name="setting_section_networkandplayer">Network and player</string>
    <string name="setting_section_basic_information">App info</string>
    <string name="setting_section_basic_function">Basic functions</string>
    <string name="setting_result_enable_market_version_update">Update</string>
    <string name="setting_result_disable_market_version_update">Newest version</string>
    <string name="dialog_ok">Ok</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_serial">Authenticate</string>
    <string name="dialog_remove_selected_bookmark">Delete selection</string>
    <string name="dialog_title_sd_not_exist_sdcard">No SD card.</string>
    <string name="dialog_title_path">Path Info</string>
    <string name="dialog_title_warning">Warning</string>
    <string name="dialog_title_close">Close</string>
    <string name="dialog_title_error">Error</string>
    <string name="dialog_title_download">Registration</string>
    <string name="dialog_title_sdtype_a_download">Device Registration</string>
    <string name="dialog_title_serial_number">Serial Number</string>
    <string name="dialog_title_serial">Serial authentication</string>
    <string name="dialog_title_input_homeurl">Home Url</string>
    <string name="dialog_title_device_authentication">Device Authentication</string>
    <string name="dialog_description_sd_not_exist_sdcard">The SD card is unmounted and moved to the home.</string>
    <string name="dialog_description_serial">The Device must be online during serial authentication.</string>
    <string name="dialog_message_close_application">Do you want to close the app?</string>
    <string name="dialog_result_no_selected">No item is selected.</string>
    <string name="dialog_player_title_skip_time">Player skip time</string>
    <string name="dialog_player_title_screen_rate">Aspect ratio</string>
    <string name="dialog_player_title_screen_lock_title">Lock screen rotation</string>
    <string name="dialog_progress_please_wait">Please wait.</string>
    <string name="dialog_progress_initializing_player">Initializing player.</string>
    <string name="dialog_progress_load_contents">Updating list</string>
    <string name="dialog_progress_sync_contents">Syncing data</string>
    <string name="guide_text_next">next</string>
    <string name="guide_text_start">start</string>
    <string name="guide_text_title_ndplayer">ND PLAYER</string>
    <string name="guide_text_description_ndplayer">This player can be used \ nin order to securely purchase \ nthe content you have purchased and \ nthat is essential for learning.</string>
    <string name="guide_text_title_ndplayer_2">With the first online certification, you can easily use content even in an environment without the Internet.</string>
    <string name="guide_text_description_ndplayer_2">Lets hit the road.</string>
    <string name="guide_text_default_storage_description">First, choose a repository from the menu.</string>
    <string name="help_text_question_01">How do I view a video (lecture)?</string>
    <string name="help_text_answer_01">To play video (lecture), "serial authentication" is always required.
        \nRun app> Select "Internal storage" or "SD card" or "USB storage"> Select "Video (Lecture)"> Authenticate serial> Play</string>
    <string name="help_text_question_02">How is serial authentication done?</string>
    <string name="help_text_answer_02">Serial authentication can be done with "serial photography" and "direct input". (Authentication is required only for first playback.)
        \n\nThe serial authentication process is only available online (eg LTE, WIFI ...)..
        \n1. Take a serial number photo : Select "[OK]" button> Taking pictures (serial number) > Select "OK" button
        \n2. Direct input: Enter serial number in serial field> Select "OK" button</string>
    <string name="help_text_question_03">mp4, wmv ... Can not play video?</string>
    <string name="help_text_answer_03">In PallyCon SD Player app, only DRM-packaged video provided by Inca Entworks can be played.
        \n(Inquiries: nd@pallycon.com / Inca Entwicks ND Team)</string>
    <string name="help_text_question_04">How do I use the video (lecture) player?</string>
    <string name="help_text_answer_04">The video (lecture) player has the following functions.
        \n\n1. Play button - Select this when playing back images.
        \n2. Stop and pause button - Select to stop or pause video playback.
        \n3. Playback bar - Check the playback status and drag it to the position of the desired part on the playback bar.
        \n4. Adjust the volume - Select this to adjust the volume of the picture.</string>
    <string name="help_text_question_05">The video (lecture) does not play.</string>
    <string name="help_text_answer_05">If the video (lecture) does not play smoothly, please exit the app and run it again.
        \n\nIf you can not rerun your app,
        \n\n1. Delete app data
        \n- Settings> General> Apps or Applications> PallyCon SD Player app Touch> Touch storage> Clear data
        \n(Serial authentication is required. Enter the serial number of the most authenticated user.)
        \n\n2. Reinstall the app
        \n- Please uninstall and re-install the app.
        \n(Serial authentication is required. Enter the serial number of the most authenticated user.)</string>
    <string name="help_text_question_06">If you touch the video (lecture), the phrase "Invalid palyback period" pops up and it can not be played.</string>
    <string name="help_text_answer_06">If the video (lecture) has a time limit, it can be played only during playback.</string>
    <string name="help_text_question_07">When attempting authentication in "Serial authentication", "OVER LIMIT DEVICE COUNT: Can not register this device !!" The phrase is up and I can not get certified.</string>
    <string name="help_text_answer_07">The serial number you entered is the serial number already used.</string>
    <string name="help_text_question_08">I can not see the file in the repository.</string>
    <string name="help_text_answer_08">Please re-run the app or try refreshing. (Sweeping the screen from top to bottom will refresh.)
        \n\n1. Internal Storage: Shows images stored in the internal storage of the smartphone.
        \n2. SD card: It shows the image stored in SD card external storage.
        \n3. USB storage: OTG (USB) Shows images stored in external storage.</string>
    <string name="message_for_toast_status_downloading">Already downloading content. Please try againg after finishing or canceling current download.</string>
    <string name="message_for_toast_status_playing">Already playing content. Please try again after closing the application.</string>
    <string name="message_for_toast_status_guest_user">Guest account can not run the app. Please switch to owner account to use the app.</string>
    <string name="message_for_toast_bookmark_limit_time">Needs at least 10 seconds interval between bookmarks.</string>
    <string name="message_for_toast_bookmark_limit_count">Up to 20 bookmarks can be registered.</string>
    <string name="message_for_toast_not_add_bookmark">Cannot go to Bookmark screen in repeat mode.</string>
    <string name="message_for_toast_not_exist_bookmark">No bookmark saved.</string>
    <string name="message_for_toast_play_not_bookmark">Not available in bookmark playback.</string>
    <string name="message_for_toast_play_not_search">This function is not supported in search result playback.</string>
    <string name="message_for_toast_not_exist_advance">No next file.</string>
    <string name="message_for_toast_not_exist_retour">No previous file.</string>
    <string name="message_for_toast_done_add_bookmark">\'%s\' file is added to bookmarks.</string>
    <string name="message_for_toast_player_repeat_hidden">The repeat function is automatically released under the following conditions when playing an audio file.\n- When the screen is turned off\n- When the player goes background</string>
    <string name="message_for_toast_favorite_content_use">Added to your favorites.</string>
    <string name="message_for_toast_favorite_content_no_use">Removed from your favorites.</string>
    <string name="message_for_toast_select_item_for_delete">Select item for delete.</string>
    <string name="message_for_toast_success_for_deleted_item_on_bookmark">Success for deleted item bookmark.</string>
</resources>