<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_white"
    android:padding="@dimen/padding_normal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/dialog_title_serial"
        android:textSize="20.0sp"
        android:textColor="@color/black"
        android:textStyle="normal" />

    <LinearLayout
        android:id="@+id/container_edit_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/margin_normal"
        android:layout_marginRight="@dimen/margin_normal"
        android:layout_marginTop="25.0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/dialog_title_serial_number"
            android:textSize="12.0sp"
            android:textColor="@color/font_gray3"
            android:textStyle="bold" />
        <!-- 메인 Fragment 영역 -->
        <com.inka.netsync.view.widget.EditTextViewSerialNumberWidget
            android:id="@+id/container_edittext_serial_number_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10.0dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_setting_arrow_normal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/dialog_description_serial"
            android:textSize="12.0sp"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="center"
        xmlns:fancy="http://schemas.android.com/apk/res-auto">
        <com.inka.netsync.view.widget.FancyButton
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:text="@string/dialog_cancel"
            android:textSize="14sp"
            android:visibility="gone"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/white"
            fancy:fb_disabledColor="@android:color/transparent"
            fancy:fb_disabledTextColor="@color/white"
            fancy:fb_radius="2dp"
            fancy:fb_textSize="14sp" />
        <com.inka.netsync.view.widget.FancyButton
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="true"
            android:padding="@dimen/padding_normal"
            android:text="@string/dialog_serial"
            android:textSize="14sp"
            android:textColor="@color/btn_font"
            fancy:fb_borderWidth="1dp"
            fancy:fb_disabledColor="@android:color/transparent"
            fancy:fb_disabledTextColor="@color/btn_font"
            fancy:fb_focusColor="@color/btn_font"
            fancy:fb_radius="2dp"
            fancy:fb_textColor="@color/btn_font"
            fancy:fb_textSize="14sp" />
        <!--<Button-->
            <!--android:id="@+id/cancel_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:background="@drawable/bg_button_border_a"-->
            <!--android:padding="@dimen/padding_normal"-->
            <!--android:layout_marginRight="@dimen/margin_normal"-->
            <!--android:text="@string/dialog_cancel"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/color_btn_with_border_text" />-->
        <!--<Button-->
            <!--android:id="@+id/confirm_button"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:background="@drawable/selector_btn_serial_auth"-->
            <!--android:layout_weight="1"-->
            <!--android:enabled="false"-->
            <!--android:padding="@dimen/padding_normal"-->
            <!--android:text="@string/dialog_serial"-->
            <!--android:textSize="14sp"-->
            <!--android:textColor="@color/btn_font"/>-->
    </LinearLayout>

</LinearLayout>